// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CalenderMonth /> tests calls render props with given month and its days 1`] = `
Array [
  Array [
    Object {
      "date": 1/1/2017,
      "disabled": false,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/2/2017,
      "disabled": false,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/3/2017,
      "disabled": false,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/4/2017,
      "disabled": false,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/5/2017,
      "disabled": false,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/6/2017,
      "disabled": false,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/7/2017,
      "disabled": false,
      "inRange": false,
      "selected": false,
    },
  ],
  Array [
    Object {
      "date": 1/8/2017,
      "disabled": false,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/9/2017,
      "disabled": false,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/10/2017,
      "disabled": false,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/11/2017,
      "disabled": false,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/12/2017,
      "disabled": false,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/13/2017,
      "disabled": false,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/14/2017,
      "disabled": false,
      "inRange": false,
      "selected": false,
    },
  ],
  Array [
    Object {
      "date": 1/15/2017,
      "disabled": false,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/16/2017,
      "disabled": false,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/17/2017,
      "disabled": false,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/18/2017,
      "disabled": false,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/19/2017,
      "disabled": false,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/20/2017,
      "disabled": false,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/21/2017,
      "disabled": false,
      "inRange": false,
      "selected": false,
    },
  ],
  Array [
    Object {
      "date": 1/22/2017,
      "disabled": false,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/23/2017,
      "disabled": false,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/24/2017,
      "disabled": false,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/25/2017,
      "disabled": false,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/26/2017,
      "disabled": false,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/27/2017,
      "disabled": false,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/28/2017,
      "disabled": false,
      "inRange": false,
      "selected": false,
    },
  ],
  Array [
    Object {
      "date": 1/29/2017,
      "disabled": false,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/30/2017,
      "disabled": false,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/31/2017,
      "disabled": false,
      "inRange": false,
      "selected": false,
    },
    null,
    null,
    null,
    null,
  ],
  Array [
    null,
    null,
    null,
    null,
    null,
    null,
    null,
  ],
]
`;

exports[`<CalenderMonth /> tests dropdowns are updated when minDate, maxDate are given 1`] = `
Array [
  Object {
    "disabled": false,
    "selected": true,
    "value": 0,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 2,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 3,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 4,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 5,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 6,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 7,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 8,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 9,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 10,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 11,
  },
]
`;

exports[`<CalenderMonth /> tests dropdowns are updated when minDate, maxDate are given 2`] = `
Array [
  Object {
    "disabled": false,
    "selected": false,
    "value": 1968,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1969,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1970,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1971,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1972,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1973,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1974,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1975,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1976,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1977,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1978,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1979,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1980,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1981,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1982,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1983,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1984,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1985,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1986,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1987,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1988,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1989,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1990,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1991,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1992,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1993,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1994,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1995,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1996,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1997,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1998,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1999,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 2000,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 2001,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 2002,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 2003,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 2004,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 2005,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 2006,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 2007,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 2008,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 2009,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 2010,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 2011,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 2012,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 2013,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 2014,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 2015,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 2016,
  },
  Object {
    "disabled": false,
    "selected": true,
    "value": 2017,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 2018,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 2019,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 2020,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 2021,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 2022,
  },
]
`;

exports[`<CalenderMonth /> tests dropdowns are updated when minDate, maxDate are given 3`] = `
Array [
  Object {
    "disabled": true,
    "selected": true,
    "value": 0,
  },
  Object {
    "disabled": true,
    "selected": false,
    "value": 1,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 2,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 3,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 4,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 5,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 6,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 7,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 8,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 9,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 10,
  },
  Object {
    "disabled": true,
    "selected": false,
    "value": 11,
  },
]
`;

exports[`<CalenderMonth /> tests dropdowns are updated when minDate, maxDate are given 4`] = `
Array [
  Object {
    "disabled": false,
    "selected": true,
    "value": 2017,
  },
]
`;

exports[`<CalenderMonth /> tests minDate and maxDate get priorty over startDate and endDate 1`] = `
Array [
  Array [
    Object {
      "date": 1/1/2017,
      "disabled": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/2/2017,
      "disabled": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/3/2017,
      "disabled": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/4/2017,
      "disabled": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/5/2017,
      "disabled": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/6/2017,
      "disabled": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/7/2017,
      "disabled": true,
      "inRange": false,
      "selected": false,
    },
  ],
  Array [
    Object {
      "date": 1/8/2017,
      "disabled": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/9/2017,
      "disabled": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/10/2017,
      "disabled": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/11/2017,
      "disabled": false,
      "inRange": true,
      "selected": false,
    },
    Object {
      "date": 1/12/2017,
      "disabled": false,
      "inRange": true,
      "selected": false,
    },
    Object {
      "date": 1/13/2017,
      "disabled": false,
      "inRange": true,
      "selected": false,
    },
    Object {
      "date": 1/14/2017,
      "disabled": false,
      "inRange": true,
      "selected": false,
    },
  ],
  Array [
    Object {
      "date": 1/15/2017,
      "disabled": false,
      "inRange": true,
      "selected": false,
    },
    Object {
      "date": 1/16/2017,
      "disabled": false,
      "inRange": true,
      "selected": false,
    },
    Object {
      "date": 1/17/2017,
      "disabled": false,
      "inRange": true,
      "selected": false,
    },
    Object {
      "date": 1/18/2017,
      "disabled": false,
      "inRange": true,
      "selected": false,
    },
    Object {
      "date": 1/19/2017,
      "disabled": false,
      "inRange": true,
      "selected": false,
    },
    Object {
      "date": 1/20/2017,
      "disabled": false,
      "inRange": true,
      "selected": false,
    },
    Object {
      "date": 1/21/2017,
      "disabled": false,
      "inRange": true,
      "selected": false,
    },
  ],
  Array [
    Object {
      "date": 1/22/2017,
      "disabled": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/23/2017,
      "disabled": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/24/2017,
      "disabled": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/25/2017,
      "disabled": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/26/2017,
      "disabled": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/27/2017,
      "disabled": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/28/2017,
      "disabled": true,
      "inRange": false,
      "selected": false,
    },
  ],
  Array [
    Object {
      "date": 1/29/2017,
      "disabled": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/30/2017,
      "disabled": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/31/2017,
      "disabled": true,
      "inRange": false,
      "selected": false,
    },
    null,
    null,
    null,
    null,
  ],
  Array [
    null,
    null,
    null,
    null,
    null,
    null,
    null,
  ],
]
`;

exports[`<CalenderMonth /> tests render prop has proper days selected when given 1`] = `
Array [
  Array [
    Object {
      "date": 1/1/2017,
      "disabled": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/2/2017,
      "disabled": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/3/2017,
      "disabled": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/4/2017,
      "disabled": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/5/2017,
      "disabled": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/6/2017,
      "disabled": false,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/7/2017,
      "disabled": false,
      "inRange": false,
      "selected": false,
    },
  ],
  Array [
    Object {
      "date": 1/8/2017,
      "disabled": false,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/9/2017,
      "disabled": false,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/10/2017,
      "disabled": false,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/11/2017,
      "disabled": false,
      "inRange": false,
      "selected": true,
    },
    Object {
      "date": 1/12/2017,
      "disabled": false,
      "inRange": true,
      "selected": false,
    },
    Object {
      "date": 1/13/2017,
      "disabled": false,
      "inRange": true,
      "selected": false,
    },
    Object {
      "date": 1/14/2017,
      "disabled": false,
      "inRange": true,
      "selected": false,
    },
  ],
  Array [
    Object {
      "date": 1/15/2017,
      "disabled": false,
      "inRange": true,
      "selected": false,
    },
    Object {
      "date": 1/16/2017,
      "disabled": false,
      "inRange": true,
      "selected": false,
    },
    Object {
      "date": 1/17/2017,
      "disabled": false,
      "inRange": true,
      "selected": false,
    },
    Object {
      "date": 1/18/2017,
      "disabled": false,
      "inRange": true,
      "selected": false,
    },
    Object {
      "date": 1/19/2017,
      "disabled": false,
      "inRange": true,
      "selected": false,
    },
    Object {
      "date": 1/20/2017,
      "disabled": false,
      "inRange": true,
      "selected": false,
    },
    Object {
      "date": 1/21/2017,
      "disabled": false,
      "inRange": false,
      "selected": true,
    },
  ],
  Array [
    Object {
      "date": 1/22/2017,
      "disabled": false,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/23/2017,
      "disabled": false,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/24/2017,
      "disabled": false,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/25/2017,
      "disabled": false,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/26/2017,
      "disabled": false,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/27/2017,
      "disabled": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/28/2017,
      "disabled": true,
      "inRange": false,
      "selected": false,
    },
  ],
  Array [
    Object {
      "date": 1/29/2017,
      "disabled": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/30/2017,
      "disabled": true,
      "inRange": false,
      "selected": false,
    },
    Object {
      "date": 1/31/2017,
      "disabled": true,
      "inRange": false,
      "selected": false,
    },
    null,
    null,
    null,
    null,
  ],
  Array [
    null,
    null,
    null,
    null,
    null,
    null,
    null,
  ],
]
`;

exports[`<CalenderMonth /> tests showDropdowns gives apt props 1`] = `
Array [
  Object {
    "disabled": false,
    "selected": true,
    "value": 0,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 2,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 3,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 4,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 5,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 6,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 7,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 8,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 9,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 10,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 11,
  },
]
`;

exports[`<CalenderMonth /> tests showDropdowns gives apt props 2`] = `
Array [
  Object {
    "disabled": false,
    "selected": false,
    "value": 1968,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1969,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1970,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1971,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1972,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1973,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1974,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1975,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1976,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1977,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1978,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1979,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1980,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1981,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1982,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1983,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1984,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1985,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1986,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1987,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1988,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1989,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1990,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1991,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1992,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1993,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1994,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1995,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1996,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1997,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1998,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 1999,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 2000,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 2001,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 2002,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 2003,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 2004,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 2005,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 2006,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 2007,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 2008,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 2009,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 2010,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 2011,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 2012,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 2013,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 2014,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 2015,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 2016,
  },
  Object {
    "disabled": false,
    "selected": true,
    "value": 2017,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 2018,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 2019,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 2020,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 2021,
  },
  Object {
    "disabled": false,
    "selected": false,
    "value": 2022,
  },
]
`;
